feat: updates some notes and changes

--- a/docs/language/js/5.md
+++ b/docs/language/js/5.md
@@ -3,6 +3,7 @@ title: 万物皆空之原型
 category: 编程语言
 tag: JavaScript
 author: JQiue
+article: false
 ---
 
 每一个函数都有一个`prototype`属性，叫做函数的原型属性，这个属性的值就是一个普通的对象，也叫做**原型对象**，而`__proto__`是对象的一个属性，属性值也是一个对象，对象的`__proto__`属性指向该对象的构造函数的`prototype`属性
