--- a/docs/language/js/6.md
+++ b/docs/language/js/6.md
@@ -2,8 +2,8 @@
 title: 模块化
 category: 编程语言
 tag: JavaScript
-time: 2019-05-04
 author: JQiue
+article: false
 ---
 
 称职的作家会把他的书分章节和段落；好的程序员会把他的代码分成模块，就好像书籍的一章，模块仅仅是一坨代码而已，好的代码模块分割的内容一定是很合理的，便于你增加减少或者修改功能，同时又不会影响整个系统。将一个复杂的程序依据一定的规则（规范）封装成几个块（文件），并组合在一起，块的内部数据/实现是私有的，只是向外暴露一些接口与其他模块通信
