--- a/docs/store/share/2.md
+++ b/docs/store/share/2.md
@@ -35,12 +35,12 @@ author: JQiue
 
 比如：我在计算机上输入这些：
 
-![beforeCe](https://gitee.com/jqiue/img_upload/raw/master/images/beforeCe.png)
+![beforeCe](http://qs0jixwj6.hn-bkt.clouddn.com/beforeCe.png)
 
-CE按钮会做这些：
+CE 按钮会做这些：
 
-![afterCe](https://gitee.com/jqiue/img_upload/raw/master/images/afterCe.png)
+![afterCe](http://qs0jixwj6.hn-bkt.clouddn.com/afterCe.png)
 
-而C按钮会做这些：
+而 C 按钮会做这些：
 
-![CeDo](https://gitee.com/jqiue/img_upload/raw/master/images/afterC.png)
+![afterC](http://qs0jixwj6.hn-bkt.clouddn.com/afterC.png)
