--- a/docs/store/share/3.md
+++ b/docs/store/share/3.md
@@ -16,13 +16,17 @@ author: 曾加
 
 小宏的五个素质比较平均，于是，他的木桶是这样的：
 
-<div align="center"><img src="https://gitee.com/jqiue/img_upload/raw/master/images/c38b0ffb83acc8fe2cab76880b9d9945_720w.jpg" alt=""/></div>
+::: center
+![1](http://qs0jixwj6.hn-bkt.clouddn.com/share-2-1.jpg)
+:::
 
 每一个木板都不是特别高，但是高度都不低，且比较平均，所以他能装的水还是挺多的。
 
 小云的五个素质不太平均，某几项比较突出，但有几项比较弱，根据木桶原理，他的木桶是这样的：
 
-<div align="center"><img src="https://gitee.com/jqiue/img_upload/raw/master/images/0cfbd8cb28de92860feb175318570d0b_720w.jpg"></div>
+::: center
+![2](http://qs0jixwj6.hn-bkt.clouddn.com/share-2-2.jpg)
+:::
 
 貌似装不了多少水的样子。  
 然而，真的装不了那么多水吗？  
@@ -34,7 +38,9 @@ author: 曾加
 
 其实，可以这样——
 
-<div align="center"><img src="https://gitee.com/jqiue/img_upload/raw/master/images/cdd4b1d2937d269877730e19fc1c2150_720w.jpg"></div>
+::: center
+![3](http://qs0jixwj6.hn-bkt.clouddn.com/share-2-3.jpg)
+:::
 
 也能装很多水嘛！
 所以，在我眼里，所谓的**木桶原理**应该是这样的：
