--- a/docs/subject/english/nce/1.md
+++ b/docs/subject/english/nce/1.md
@@ -261,7 +261,7 @@ Thanks.
 
 ## Lesson 25 Mrs. Smith's kitchen
 
-![lesson 25](https://gitee.com/jqiue/img_upload/raw/master/images/kitchen.png)
+![1](http://qs0jixwj6.hn-bkt.clouddn.com/english-nce-1.png)
 
 ```text
 Mrs. Smith's kitchen is small.  
@@ -280,7 +280,7 @@ The cup is clean.
 
 ## Lesson 27 Mrs. Smith's living room
 
-![lesson 37](https://gitee.com/jqiue/img_upload/raw/master/images/libingRoom.png)
+![1](http://qs0jixwj6.hn-bkt.clouddn.com/english-nce-2.png)
 
 ```text
 Mrs. Smith's living room is large.  
@@ -619,17 +619,22 @@ Better, Thank you, doctor.
 Can I see him please, Mrs. Williams?  
 Certainly, doctor.  
 Come upstairs.  
+
 You look very well, Jimmy.  
+Yor are better now, but you mustn't get up yet
 You must stay in bed for another two days.  
+
 The boy mustn't go to school yet, Mrs. Williams.  
 And he mustn't eat rich food.  
 Does he have a temperature, doctor?  
 No, he doesn't.  
 Must he stay in bed?  
+Yes.
 He must remain in bed for another two days.  
 He can get up.  
 for about two hours each day,  
 but you must keep the room warm.  
+
 Where's Mr. Williams this evening?  
 He's in bed, doctor.  
 Can you see him please?  
@@ -641,20 +646,26 @@ He has a bad cold, too!
 ```text
 What are you going to do this evening, Jill?  
 I'm going to meet some friends, Dad.
+
 You mustn't come home late.  
 You must be home at half past ten.
 I can't get home so early, Dad!  
+
 Can I have the key to the front door please?  
 No, you can't.  
+
 Jill's eighteen years old, Tom.  
 She's not a baby.  
 Give her the key.  
 She always comes home early.  
 Oh, all right!  
+
 Here you are.  
 But you mustn't come home after a quarter past eleven.  
 Do you hear?  
-Yes, Dad. Thanks, Mum.  
+Yes, Dad. 
+
+Thanks, Mum.  
 That's all right. Goodbye.  
 Enjoy yourself!  
 We always enjoy ourselves, Mum. Bye-bye.
@@ -671,7 +682,7 @@ How's Jimmy today?
 He's very well, thank you.  
 Was he absent from school last week?  
 Yes, he was.  
-He was absent on Monday, Tuesday, Wednesday and Tuesday.  
+He was absent on Monday, Tuesday, Wednesday and Thursday.  
 How are you all keeping?  
 Very well, thank you.  
 We're going to spend three days in the country.  
@@ -709,19 +720,25 @@ On the way home, my wife said to me, 'Don't drive so quickly! You're not Billy S
 What's Ron Marston like, Pauline?  
 He's awful!  
 He telephoned me four times yesterday,
-and three times the day before yesterday.  
+and three times the day before yesterday.
+
 He telephoned the office yesterday morning and yesterday afternoon.  
 My boss answered the telephone.  
+
 What did your boss say to him?  
 He said, "Pauline is typing letters. She can't speak to you now!"  
+
 Then I arrived home at six o'clock yesterday evening.
 He telephoned again. But I didn't answer the phone!  
+
 Did he telephone again last night?  
 Yes, he did.  
 He telephoned at nine o'clock.  
+
 What did you say to him?  
 I said, 'This is Pauline's mother.
 Please don't telephone my daughter again!'  
+
 Did he telephone again?  
 No, he didn't!
 ```
@@ -763,6 +780,7 @@ Can you get a pair for me, please?
 I'm afraid that I can't.  
 They were in fashion last year and the year before last.  
 But they're not in fashion this year.  
+
 These shoes are in fashion now.  
 They look very uncomfortable.  
 They are very uncomfortable.
@@ -796,18 +814,24 @@ I can wait, but my toothache can't!
 ```text
 What are you doing, Carol?  
 I'm making a shopping list, Tom.  
+
 What do we need?  
 We need a lot of thing this week.  
+
 I must go to the grocer's.  
 We haven't got much tea or coffee, and we haven't got any sugar or jam.  
+
 What about vegetables?  
 I must go to the greengrocer's.  
 We haven't got many tomatoes, but we've got a lot of potatoes.  
+
 I must go to the butcher's, too.  
 We need some meat.  
 We haven't got any meat at all.  
+
 Have we got any beer and wine?  
 And I'm not going to get any!  
+
 I hope that you've got some money.  
 I haven't got much.  
 Well, I haven't got much either!
@@ -819,21 +843,26 @@ Well, I haven't got much either!
 Hi, Carol! Where's Tom?  
 He's upstairs.  
 He's having a bath.  
+
 Tom!  
 Yes?  
 Sam's here.  
 I'm nearly ready.  
+
 Hello, Sam. Have a cigarette.  
 No, thanks, Tom.  
 Have a glass of whisky then.  
 OK. Thanks.  
+
 Is dinner ready, Carol?  
 It's nearly ready.  
 We can have dinner at seven o'clock.  
+
 Sam and I had lunch together today.
 We went to a restaurant.  
 What did you have?  
 We had roast beef and potatoes.  
+
 Oh!  
 What's the matter, Carol?  
 Well, you're going to have roast beef and potatoes again tonight!
@@ -843,20 +872,25 @@ Well, you're going to have roast beef and potatoes again tonight!
 
 ```text
 Hello, Sam. Come in.  
+
 Hi, Sam. We're having lunch.  
 Do you want to have lunch with us?  
 No, thank you, Tom.  
 I've already had lunch.
 I had at half past twelve.  
+
 Have a cup of coffee then.  
 I've just had a cup, thank you.  
 I had one after my lunch.  
+
 Let's go into the living room, Carol.  
 We can have our coffee there.  
+
 Excuse the mess, Sam.  
 This room's very untidy. We're packing our suitcases.  
 We're going to leave tomorrow.  
 Tom and I are going to have a holiday.  
+
 Aren't you lucky!  
 When are you going to have a holiday, Sam?  
 I don't know.  
@@ -872,7 +906,7 @@ Hello, Ken.
 Hi, George.  
 Have you just been to the cinema?  
 Yes, I have.  
- What's on?  
+What's on?  
 'Paris in the spring'.  
 Oh, I've already seen it.  
 I saw it on television last year.  
@@ -901,6 +935,7 @@ Ah, yes, I remember now.
 Have your mechanics finished yet?  
 No, they're still working on it.
 Let's go into the garage and have a look at it.  
+
 Isn't that your car?  
 Well, it was my car.  
 Didn't you have a crash?  
@@ -908,7 +943,8 @@ That's right.
 I drove it into a lamp-post.  
 Can your mechanics repair it?  
 Well, they're trying to repair it, sir.  
-But to tell you the truth. you need a new car!
+But to tell you the truth. 
+you need a new car!
 ```
 
 ## Lesson 89 For sale
@@ -919,6 +955,7 @@ I believe that this is house is for sale.
 That's right.  
 May I have a look at it, please?  
 Yes, of course. Come in.  
+
 How long have you lived here?  
 I've live here for twenty years.  
 Twenty year! That's long time.  
@@ -937,12 +974,15 @@ Women always have the last word.
 
 ```text
 Has Ian sold his house yet?  
-Yes, he has. He sold it last week.  
+Yes, he has. 
+He sold it last week.  
 Has he moved to his new house yet?  
-No, not yet. He's still here.  
+No, not yet. 
+He's still here.  
 He's going to move tomorrow.  
-When? Tomorrow afternoon.  
-No. Tomorrow afternoon. I'll miss him.  
+When? Tomorrow morning?  
+No. Tomorrow afternoon. 
+I'll miss him.  
 He has always been a good neighbour.  
 He's a very nice person.  
 We'll all miss him.  
@@ -959,14 +999,17 @@ No, he didn't want to leave, but his wife did!
 ## Lesson 93 Our new neighbour
 
 ```text
-Nigel is our new next-door neighbour. He's a pilot.  
+Nigel is our new next-door neighbour. 
+He's a pilot.  
 He was in the R.A.F.  
 He will fly to New York next month.  
 The month after next he'll fly to Tokyo.  
-At the moment, he's in Madrid. He flew to Spain a week ago.  
+At the moment, he's in Madrid. 
+He flew to Spain a week ago.  
 He'll return to London the week after next.  
 He's only forty-one years old, and he has already been to nearly every country in the world.  
-Nigel is a very lucky man. But his wife isn't very lucky. She usually stays at home!
+Nigel is a very lucky man. But his wife isn't very lucky. 
+She usually stays at home!
 ```
 
 ## Lesson 95 Tickets, please
@@ -974,7 +1017,7 @@ Nigel is a very lucky man. But his wife isn't very lucky. She usually stays at h
 ```text
 Two return tickets to London, please.  
 What time will the next train leave?  
-At nineteen minutes past eight.  
+At nineteen minutes past eight. 
 Which platform?  
 Platform Two. Over the bridge.  
 What time will the next train leave?  
@@ -1003,7 +1046,8 @@ It's a small blue case and it's got a zip.
 There's a label on the handle with my name and address on it.  
 Is this case yours?  
 No, that's not mine.  
-What about this one? This one's got a label.  
+What about this one? 
+This one's got a label.  
 Let me see it.  
 What's your name and address?  
 David Hall, 83, Bridge Street.  
@@ -1447,3 +1491,13 @@ I don't want to make another film for a long time.
 Let's buy a newspaper, Liz.
 Listen to this!
 ```
+
+## Lesson 135
+
+## Lesson 137
+
+## Lesson 139
+
+## Lesson 141
+
+## Lesson 143
