--- a/docs/devtools/git/3.md
+++ b/docs/devtools/git/3.md
@@ -2,8 +2,9 @@
 title: 让你的提交带上 Emoji
 category: 版本控制
 tag: Git
-time: 2019-10-9
+time: 2019-10-09
 author: JQiue
+article: false
 ---
 
 在 git commit 说明中也可以通过特殊字符来转义一些小表情
@@ -13,7 +14,6 @@ git commit -m "fix：:bug: 修复一个缺陷"
 ```
 
 这是别人看到的 commit 信息 => fix：:bug:修复一个缺陷
-
 
 🎨 - `:art:` - 改进代码的结构/格式.  
 ⚡️ - `:zap:` - 提高性能.  
@@ -81,4 +81,4 @@ git commit -m "fix：:bug: 修复一个缺陷"
 🚩 - `:triangular_flag_on_post:` - 添加、更新或删除功能标志.  
 🥅 - `:goal_net:` - 捕获错误.  
 💫 - `:dizzy:` - 添加或更新动画和过渡.  
-🗑 - `:wastebasket:` - 需要清理的弃用代码. 
+🗑 - `:wastebasket:` - 需要清理的弃用代码.
