feat: updates some notes and changes

--- a/docs/store/share/4.md
+++ b/docs/store/share/4.md
@@ -1,15 +1,21 @@
 ---
-title: 互联网是怎么工作的
+title: Excel 技巧总结
 category: 知识分享
-tag: 知识
-time: 2019-10-22
+tag: Office
 author: JQiue
+article: false
 ---
 
-互联网只是一个技术名词，目的是让设备之间进行通信，比如电脑通常需要网线来连接它们，假如只有两台电脑，那么就可以通过一根网线来连接它们，但网络不仅仅局限于两台电脑，如果是十台电脑，那么情况就变得复杂了，每个电脑都需要有九个插头来连接其他电脑，总共需要 45 根网线
-
-为了解决这个问题，我们可以让网络上的每台电脑连接到一个叫做路由器的设备上，路由器只是为了确保一台电脑发出的信息可以正确的到达正确的电脑，比如电脑 A 发送信息给路由器，路由器再发送给电脑 B，这样就确保了不会发送到电脑 C
-
-路由器加入了这个系统后，便只需十根线构成网络，所有的电脑只需要连接路由器即可，虽然路由器解决了一部分电脑的连接问题，但它解决不了上百千台，上亿台电脑这种量级，所以路由器的覆盖率特别有限
-
-路由器也是一种小型的设备，它也可以和其他路由器产生连接，只要路由器连着路由器，就会有无穷的网络规模，似乎越来越像人们常说的互联网，但是很遗憾，这种方式是不可取的，因为每个人都会建立不同的网络，这导致和其他地方之间建设电缆连接是不可能的
+1. 列宽或行高一致：选中边缘要调整的所有列或行，选择其中一个进行大小调整，其他就会自动变成一致
+2. 自动递增：选择需要递增的列，末尾是数字则会自动加1填充，可以根据两个单元格的数字差距进行隔数递增，如果不想递增1，则可以选择两个单元格，word 会根据两个单元格的数字差来递增
+3. 冻结窗格：常用于解决行或列过长而导致看不到标题信息，在“视图”选项卡中使用冻结窗格功能，需要选中行或列，从下一行或列开始冻结
+4. 分割视窗：常用于对比不同行之间的数据，在“视图”选项卡中使用拆分功能，选中行或列，从下一行或列开始拆分
+5. 排序：在排序时不要选中所有的行，否则会造成数据混乱
+6. 分类排序：可以自定义排序来实现归类排序
+7. 自定义序列排序：自定义序列排序可以根据规则来排序
+8. 筛选快捷键：ctrl + shift + L
+9. 文本筛选：可以根据一些关键字来实现模糊筛选
+10. 色彩排序：也可以根据单元格的颜色进行排序，前提是必须上色
+11. 切片器：可以更加直观的筛选数据
+12. 条件格式：可以根据筛选条件来格式化单元格样式，必须选择所有列或行
+13. 根据生日计算年龄：公式“=DATEDIF([@生日], "2017/1/1", "y")”
