--- a/docs/subject/english/nce/1.md
+++ b/docs/subject/english/nce/1.md
@@ -1477,7 +1477,7 @@ We have this problem every year.
 In the end, we stay at home and look after everything!
 ```
 
-## Lesson 133 Sensational ness
+## Lesson 133 Sensational news
 
 ```text
 Have you just made a new film, Miss Marsh?
@@ -1492,12 +1492,104 @@ Let's buy a newspaper, Liz.
 Listen to this!
 ```
 
-## Lesson 135
+## Lesson 135 The latest report
 
-## Lesson 137
+```text
+Are you really going  to retire, Miss Marsh?
+I may.
+I cn't make up my mind.
+I will have to ask my future husband.
+He won't let me make another film.
+Your future husband, Miss Marsh?
+Yes. Let me introduce him to you.
+His name is Carlos.
+We're going to get married next week.
 
-## Lesson 139
+Look, Liz! 
+Here's another report about Karen Marsh. 
+Listen：'Karen Marsh：The latest. At her London Hotel today Miss Marsh told reporters she might retire. She said she couldn't make up her mind. She said she would have to ask her future husband. She said her future husband would not let her make another film. Then she introduced us to Carlos and told us they would get married next week.'
 
-## Lesson 141
+That's sensational news, isn't it,
+Kate?
+It certainly is.
+He'll be her sixth husband!
+```
 
-## Lesson 143
+## Lesson 137 A pleasant dream
+
+```text
+Are you doing the football pools, Brian?
+Yes, I've nearly finished, Julie.
+I'm sure we'll win something this week.
+You always say that, but we never win anything!
+What will you do if you win a lot of money?
+If I win a lot of money I'll buy you a mink coat.
+I don't want a mink coat.
+I want to see the world.
+All right.
+If we win a lot of money we'll travel round the world and we'll stay at the best hotels.
+Then we'll return home and buy a big house in the country.
+We'll have a beautiful garden and ...
+But if we spend all that money we'll be poor agin.
+What'll we do then?
+If we spend all the money we'll try and win the football pools again.
+It's a pleasant dream but everything depends on 'if'!
+```
+
+## Lesson 139 Is that you, John?
+
+```text
+Is that you, John?
+Yes, speaking.
+Tell Mary we'll be late for dinner this evening.
+I'm afraid I don't understand.
+Hasn't Mary told you?
+She invited Charloate and me to dinner this evening.
+I said I would be at your house at six o'clock, but the boss wants me to do some extra work.
+I'll have to stay at the offce.
+I don't know when I'll finish.
+Oh, and by the way, my wife wants to know if Mary needs any help.
+I don't know what you're talking about.
+That is John Smith, isn't it?
+Yes, I'm John Smith.
+You are John Smith, the engineer, aren't you?
+That's right.
+You work for the Overseas Engineering Company, don't you?
+No, I don't.
+I'm John Smith the telephone enineer and I'm repairing your telephone line.
+```
+
+## Lesson 141 Sally's first train ride
+
+```text
+Last week, my four-year-old daughter, Sally, was inveted to a children's party.
+I decided to take her by train.
+Sally was very exceted because she had never travelled on a train before.
+She sat near the window and asked questions about everything she saw.
+Suddenly, a middle-aged lady got on the train and sat opposite Sally.
+'Hello, little girl,'she said.
+Sally did not answer, but looked at her curiously, The lady was dressed in a blue coat and a large, funny hat.
+After the train had left the station,  the lady opened her handbag and took out her powder compact.
+She then began to make up her face.
+'Why are you doing that?' Sally asked.
+'To make myself beautiful,' the lady answered.
+She put away her compact and smiled kindly.
+'But you are still ugly,' Sally said.
+Sally was amused, but I was very embarrassed!
+```
+
+## Lesson 143 A walk through the woods
+
+```text
+I live in a very old town which is surrounded by beautiful woods.
+It is a famous beauty spot.
+On Sundays, hundreds of people come from the city to see our town and to walk through the woods.
+Visitors have been asked to keep the woods clean and tidy.
+Litter baskets have been placed under the trees, but people still throw their rubbish everywhere.
+Last Wednesday, I went for a walk in the woods.
+What I saw made me very sad.
+I counted seven old cars and three old refrigerators.
+The litter baskets were emplty and the ground was covered with pieces of paper, cigarette ends, old tyres.
+empty bottles and rusty tins.
+Among the rubbish, I found a sign which said, 'Anyone' wholeaves litter in these woods will be prosecuted!'
+```
