feat: updates some notes and changes

--- a/docs/language/js/12.md
+++ b/docs/language/js/12.md
@@ -1,7 +1,7 @@
 ---
-title: 介绍
-category: 后端
-tag: NodeJS
+title: NodeJS：介绍
+category: 编程语言
+tag: [NodeJS, Runtime]
 author: JQiue
 article: false
 ---
