--- a/docs/language/js/13.md
+++ b/docs/language/js/13.md
@@ -1,7 +1,7 @@
 ---
-title: 核心模块-url&&querystring
-category: 后端
-tag: NodeJS
+title: NodeJS：核心模块-url&&querystring
+category: 编程语言
+tag: [NodeJS, Runtime]
 author: JQiue
 article: false
 ---
