--- a/docs/subject/english/3.md
+++ b/docs/subject/english/3.md
@@ -1,5 +1,5 @@
 ---
-title: 语句的结构：句型
+title: 句型
 category: 英语
 author: JQiue
 article: false
@@ -85,11 +85,11 @@ We made him our monitor.
 
 ### 特殊疑问句
 
-当对某些具体的部分进行提问时，就要用到特殊疑问句，特殊疑问句由`特殊疑问词+一般疑问句`组成
+当对某些具体的部分进行提问时，就要用到特殊疑问句，特殊疑问句由`特殊疑问词 + 一般疑问句`组成
 
 特殊疑问词：what，when，who，how，where，why
 
-He bought three books yesterday.
+对`He bought three books yesterday`不同的部分进行提问
 
 ```text
 询问主语：Who bought three books yesterday?
@@ -97,6 +97,24 @@ He bought three books yesterday.
 询问时间：When did he buy three books?
 ```
 
-当不是对主语部分提问时，要用 Be 动词或助动词提问
+当对非主语部分提问时，要用 Be 动词或助动词
 
 补充：How long，How far，How often
+
+```text
+They have been in China for three years. 对时间提问
+How long have they been in China?
+
+It is about 4 kilometers from Beijing to Xi'an. 对距离提问
+How far is it from Beijing to Xi'an.
+
+They come to visit me once a week. 对频率提问
+How often do they come to visit. 原句中没有助动词，要借助一下
+
+She came late. because she missed the bus. 对原因提问
+Why did she came late?
+```
+
+::: tip
+How 和一些形容词结合，可以形成更丰富的提问
+:::
