--- a/docs/subject/math/1.md
+++ b/docs/subject/math/1.md
@@ -4,13 +4,7 @@ author: JQiue
 article: false
 ---
 
-小明的爸爸有三个儿子，大儿子叫大毛，二儿子叫二毛，三儿子叫____？
-
-## 概念
-
-集合是一种确定对象构成的整体，构成集合中的每个对象叫做**元素**
-
-元素与集合只有**属于**和**不属于**两种关系
+集合是一种确定对象构成的整体，构成集合中的每个对象叫做**元素**，元素与集合只有**属于**和**不属于**两种关系
 
 ## 三大特性
 
@@ -50,4 +44,4 @@ N ∈ Z ∈ Q ∈ R
 + 真子集：除去集合本身的子集，剩下的都是真子集
 + 交集：由既属于集合 A 又属于集合 B 的公共元素组成的集合叫做 A 与 B 的交集
 + 并集：由属于集合 A 或属于集合 B 的所有元素组成的集合叫做 A 与 B 的并集
-+ 补集：
++ 补集：如果集合 A 是 全集 U 的子集，由 U 中不属于 A 的所有元素组成的集合，叫做集合 A 在全集 U 中的补集
