--- a/docs/application/web/css/1.md
+++ b/docs/application/web/css/1.md
@@ -36,7 +36,7 @@ div {
 
 :::
 
-+ 外联样式：将样式代码写到一个单独的`.css`文件中，在`<head>`标签中使用`<link>`的`href`属性引入指定的样式文件，文档和样式文件相分离，维护性最好，最推荐使用的方式
++ 外联样式：将样式代码写到一个独立的`.css`文件中，在`<head>`标签中使用`<link>`的`href`属性引入，文档和样式文件相分离，维护性最好，最推荐使用的方式
 
 ```html
 <link rel="stylesheet" href="index.css"/>
@@ -59,15 +59,15 @@ div {
 
 ## 三大特性
 
-CSS三大特性决定着元素的属性是如何生效的
+CSS 三大特性决定着元素的属性是如何生效的
 
 ### 层叠性
 
-层叠性是 CSS 处理冲突的一种能力，通常是同一个标签被选中多次并多次设置相同的属性，才会发生层叠性，这个时候优先级较高的就会生效，CSS 全称就是层叠性样式表，由此可见一般
+层叠性是 CSS 处理冲突的一种能力，通常是同一个标签被选中多次并多次设置相同的属性，才会发生层叠性，优先级较高的就会生效，CSS 全称就是层叠性样式表，由此可见一般
 
 ### 继承性
 
-部分父元素的属性会被后代所继承，并不是所有的属性都会被继承，以`color/font-/text-/line`开头的属性会被继承
+部分父元素的属性会被后代所继承，但不是所有的属性都会被继承，以`color/font-/text-/line`开头的属性会被继承
 
 ::: tip
 `<a>`标签中的下划线和颜色都不会继承，`<h>`标签的文字大小也不会继承
