--- a/docs/language/js/2.md
+++ b/docs/language/js/2.md
@@ -19,15 +19,27 @@ article: false
 */
 ```
 
+::: tip
+不支持注释嵌套，不要在多行注释中嵌套另一个多行注释
+:::
+
 ## 代码块和语句
 
-JavaScript 采用`{}`来区分代码之间的层次，语句与语句之间可以加`;`，也可以不加
+JavaScript 采用`{}`来区分代码之间的层次，当存在换行符时，大多数情况下可以省略语句的分号
+
+::: tip
+JavaScript 会将换行符理解成“分号”，但有部分例外，比如在`[]`前不会被添加一个隐式的分号，运行时可能造成错误，所以对新手来说最好不要省略
+:::
 
 ## 标识符
 
-+ 由英文字母，数字和下划线组成，但第一个字符不能是数字
++ 由英文字母、数字、符号`$`和`_`组成，但第一个字符不能是数字
 + 不能是 JavaScript 中的关键字和保留字
 + 区分大小写
+
+::: tip
+甚至允许非英文字母，从技术上来讲，这样是没问题的，但是使用英文字母是惯例
+:::
 
 ## 变量
 
@@ -46,21 +58,30 @@ var bar = 3;
 如果使用了一个未声明的变量，且在后面进行了声明，解释器会将该变量的声明进行提前。如果在声明的同时赋值，赋值操作不会被提前
 :::
 
+为了避免上述问题，在 ES6 中新增了`let`关键字，它和`var`大致相同，但`let`是最推荐的变量声明方式
+
 ## 常量
 
 ES5 前不支持常量定义，但可以通过`Object.defineProperty()`间接实现定义常量，后在 ES6 中支持以`const`关键字定义
+
+```javascript
+const PI = 3.14;
+```
 
 当一个数值出现正无穷大时会出现`Infinity`，负无穷大时会出现`-Infinity`，当一个未定义的变量进行数值运算时会出现`NaN`
 
 ## 数据类型
 
-### 基本类型
+JavaScript 中有八种基本的数据类型（七种原始类型，一种复杂类型）
 
-+ Number：数值类型
-+ String：由`'`或`"`括起来的字符序列
++ Number：代表整数和浮点数，除了常规的数字，还包括一些“特殊数值”也属于这种类型：`Infinity`,`-Infinity`,`NaN`，在 JavaScript 中做数学运算是足够安全的，不会因为任何错误而停止，最坏的情况下会得到`NaN`
++ Bigint：任意长的整数
++ String：由`'`、`"`、<code>``</code>括起来的字符序列，单引号和双引号是没什么区别的，但反引号是扩展功能，允许将变量或表达式通过`${...}`嵌入字符串中
 + Boolean：只有两个取值`true`和`false`，在适当的时候会转换为`1`和`0`
-+ Undefined：只有一个和类型名相同的取值`undefined`，当一个变量未赋值时，值就是`undefined`
-+ Null：只有一个和类型名相同的取值`null`，当一个引用类型的变量不再使用时即可赋值`null`，表示变量可以存在，但是不需要值
++ Null：特殊值`null`不属于任何类型，它是一个独立的类型，只有一个`null`值，JavaScript 中的`null`仅代表“无”、“空”或“未知值”的特殊值
++ Undefined：`undefined`和`null`一样是独立的类型，当一个变量未赋值时，值就是`undefined`
++ Symbol：用于唯一的标识符
++ Object：更复杂的数据结构
 
 ::: tip 不同进制的数值表示
 二进制用`0b`表示  
@@ -69,46 +90,398 @@ ES5 前不支持常量定义，但可以通过`Object.defineProperty()`间接实
 十六进制用`0x`表示
 :::
 
-### 复杂类型
-
-复杂类型都由基本类型组成
-
-+ Array：存储多个值，类型非常自由
-+ Object：定义一个对象，属性由基本属性组成
-
 ### 类型检测
 
-+ typeof：返回该一个说明数据类型的字符串
++ typeof：返回该一个说明数据类型的字符串，支持`typeof x`和`typeof(x)`两种形式
 + instanceof：检测一个对象是否为另一个对象的实例
+
+::: tip
+如果用 typeof 检测 `null`会得到`object`，这是一个设计上的错误，实际上它并不是`object`
+:::
 
 ### 类型转换
 
-JavaScript 提供了[全局函数](/language/js/8/#转换函数)对数据类型进行转换
+大多数情况下 JavaScript 会将值转换为正确的类型，但某些时候需要将值显示的转换
 
-::: tip 隐式转换
-在某些情况下，也存在隐式转换
++ 字符串转换：String(value) 将一个值转换为字符串类型
++ 数字转换：Number(value) 将一个值转换为数字类型，这个值应该是一个有效数字，比如将字符串数字转化为数值数字，否则就会返回`NaN`
++ 布尔转换：Boolean(value) 将一个值转换为布尔类型，直观上是“空”（0、空串、null、undefined、NaN）的值会变成`false`，剩下的都是`null`
+
+::: danger
+包含`0`的字符串是`true`，JavaScript 中的非空字符串总是`true`
 :::
 
 ## 运算符
 
-与 C 语言和 Java 基本一致，除了一个`==`等于运算符和`===`全等运算符，全等运算符会先进行类型比较，然后再进行值比较
+### 数学运算
+
+符号|作用
+---|---
++|加法
+-|减法
+*|乘法
+/|除法
+%|取余
+**|求幂
+
+通常情况下加法用于求和，但是如果用于字符串，它将连接字符串，在表达式中如果有一个字符串，那么都会被转换为字符串，但运算符是按照顺序工作的
+
+```javascript
+1 + 1 + '1' // '21' 而不是 '111'
+```
+
+`+`有时候也可作为一元运算符，这会将值合法的转换数字类型，它的效果和`Number()`相同，但更加简短
+
+```javascript
++true // 1
++"" // 0
+```
+
+### 赋值
+
+`=`也是一个运算符，只不过优先级比较低，所以总是等到其他表达式运算完成才轮到`=`，`=`不仅仅可以赋值，也会返回一个值，这很有趣，但是不要使用这样的代码
+
+```javascript
+let foo = 1;
+let bar = 2;
+let qux = 3 - (foo = bar + 1);
+console.log(foo); // 3
+console.log(bar); // 0
+```
+
+当然也支持链式赋值，尽量不使用这种方式，因为可读性变差了
+
+```javascript
+let foo, bar;
+foo = bar = 5;
+console.log(foo); // 5
+console.log(bar); // 5
+```
+
+不仅如此，还支持原地修改，因为经常需要对某个变量进行允许，且存储在该变量中，类似于一种“修改并赋值”的操作
+
+```javascript
+let foo = 2;
+foo = foo + 2;
+foo = foo * 2;
+```
+
+可以使用`+=`和`*=`来表示
+
+```javascript
+foo += 2; // 等同于 foo = foo + 2
+foo *= 2; // 等同于 foo = foo * 2
+```
+
+也支持自增自减，优先级比大多数运算符高
+
+### 比较
+
+所有的比较运算符返回结果都为布尔值
+
+在进行字符串的大小比较时，会按字符逐个进行比较（字符编码）
+
+```javascript
+'z' > 'a' // true
+'abd' > 'abc' // true
+'aaa' > 'aa' // true
+```
+
+规则如下：
+
+1. 先比较首字符的大小，如果相等进入下一步
+2. 比较后面的字符，如果相等则继续向后比较，直至完成
+3. 如果两个字符串的字符都用完了，则代表相等，否则未结束的字符串更大
+
+对于不同类型的比较，会将值转换为数值再判定大小
+
+```javascript
+'3' > 1 // true，'3' 被转换为数字 2
+'03' > 1 // true，'03' 被转换为数字 1
+```
+
+对布尔类型而言，`true`会被转换为`1`,`false`则被转换为`0`
+
+```javascript
+true == 1 // true
+false == 0 // true
+```
+
+普通的`==`会出现一个问题，它不能区分`0`和`false`和`''`和`false`，这是因为`==`再比较时会先转换类型，如果要严格区分类型再比较就可以使用`===`
+
+`===`不会做任何类型的转换，同样的`!==`也表示“严格不等于”
+
+在非严格相等`==`下，`null`和`undefined`相等，但各不等于其他值
 
 ::: tip 特殊值的比较
-`NaN`和`NaN`比较会返回`false`，无论是否全等，但是`null`和`undefined`进行`==`比较时会返回`true`，而进行`===`比较时会返回`false`。这是因为`NaN`、`null`和`undefined`都会被解释成一个随机的对象
+`NaN`和`NaN`比较会返回`false`，无论是否全等，但是`null`和`undefined`进行`==`比较时会返回`true`，而进行`===`比较时会返回`false`
 :::
+
+### 逻辑运算
+
+JavaScript 有三个逻辑运算符：`||`，`&&`，`!`，它们可以用于任何类型
+
+`||`不仅有传统编程上的作用，在 JavaScript 中还有着更为特殊的用法
+
+```javascript
+let result = value1 || value2 || value3;
+```
+
+在上述示例中`||`做了这样的事：
+
+1. 从左到右计算操作数
+2. 处理操作数时，将其转换为布尔值，如果为`true`则停止计算，并返回当前操作数
+3. 如果所有的操作数都是`false`，那么就返回最后一个操作数
+
+返回的是操作数的原值，不会做任何类型转换，这个特性产生了很多有趣的用法
+
+`&&`在传统的编程中，只有操作数都是`true`时才会返回`true`，像`||`一样，操作数可以是任意类型的值，当然它也有着特殊的用法
+
+```javascript
+let result = value1 && value2 && value3;
+```
+
+`&&`做了这样的事：
+
+1. 从左到右计算操作数
+2. 处理操作数时，将其转换为布尔值，如果为`false`则停止计算，并返回当前操作数
+3. 如果所有的操作数都是`true`，那么就返回最后一个操作数
+
+与`||`不同的是，`&&`会返回第一个计算为`false`的操作数
+
+::: danger
+不要用`||`或`&&`取代`if`
+:::
+
+`!`运算就更加简单了，它只接收一个参数，然后将参数转换为布尔值，并进行取反
+
+```javascript
+!true // false
+```
+
+使用`!!`可以将某个值转换为布尔值，也就是取反再取反
+
+```javascript
+!!1 // true 
+```
+
+`!`比`&&`和`||`优先级高，`||`是优先级最低的
+
+### 空值合并
+
+空值合并的写法为`a ?? b`，如果`a`是已定义的，则结果为`a`，如果`a`不是已定义的，则结果为`b`
+
+通常`??`的使用场景，是为可能未定义的变量提供一个默认值
+
+```javascript
+let user = 'foo';
+console.log(user ?? "bar");
+```
+
+`??`似乎和`||`用法相同，，但`||`是长期存在，并被长期的用于这种目的，另一方面，`??`是最近才被添加到 JavaScript 中的，他们最重要的区别是：
+
+1. `||`返回第一个为真的值
+2. `??`返回第一个已经定义的值
+
+`||`无法区分`false`，`0`，空串，以及`null/undefined`，它无法考虑下面这种情况
+
+```javascript
+let height = 0;
+console.log(height || 100); // 100
+console.log(height ?? 100); // 0
+```
+
+这种情况使用`??`才能得出正确的结果
+
+出于安全，JavaScript 禁止`??`和`||`以及`&&`连用，除非明确的使用括号来指定优先级
+
+```javascript
+let x = 1 && 2 ?? 3; // Syntax error
+let y = (1 && 2) ?? 3; // ok
+```
 
 ## 流程控制
 
-基本的语句执行流程和 C 类似
+### 条件分支
+
+`if`语句和条件运算符`?`均可实现根据条件来执行不同的语句
+
+```javascript
+if (2 == 2) console.log('2 == 2');
+```
+
+在上面这个例子中，括号中的表达式会被转换为布尔值，为`true`则执行，`false`则不执行，这仅执行一条语句，如果想执行多条，必须将执行的语句放在`{}`中
+
+```javascript
+if (2 == 2) {
+  console.log('1');
+  console.log('2');
+}
+```
+
+::: tip
+当省略`{}`时，`if`只会决定紧跟后面的一条语句是否执行
+:::
+
+`if`也可以包含一个可选的`case`块，如果条件不成立，就会执行`case`代码块中的语句
+
+```javascript
+let age = 17;
+if (age > 18) {
+  console.log('成年了');
+} else {
+  console.log('还未成年呢');
+}
+```
+
+在这个基础上还能使用`else if`产生更多的条件分支
+
+```javascript
+let score = 59;
+if (score >= 90) {
+  console.log('你太优秀了');
+} else if (score >= 60) {
+  console.log('刚刚及格');
+} else {
+  console.log('继续努力');
+}
+```
+
+::: tip
+最后一个`else`是可选的
+:::
+
+有时候需要更加简单的方式达到目的，而条件运算符可以帮忙做到这一点
+
+```javascript
+let ageFlag;
+let age;
+if (age > 18) {
+  ageFlag = true;
+} else {
+  ageFlag = false;
+}
+```
+
+使用`?`
+
+```javascript
+let age;
+let ageFlag = age > 18 ? true : false;
+```
+
+条件运算符的语法是`let result = condition ? value1 : value2`，当`condition`为`true`则返回`value1`，否则返回`value2`
+
+虽然`?`可替代`if`，但是可读性较差，当需要根据条件返回值时就使用`?`，当需要执行不同的代码结构时应该使用`if`
+
+### 循环
+
+JavaScript 有`while`，`do...while`，`for`三种循环结构
+
+这是`while`的循环结构，当`condition`为真时，就会执行循环体中的语句，循环体的每一次执行叫做**迭代**
+
+```javascipt
+while (condition) {
+  // 代码
+}
+```
+
+这是`do...while`的循环结构，它将检查条件移动到下方，这导致无论如何循环体都会执行一次，然后再判断条件
+
+```javascript
+do {
+  // 代码
+} while
+```
+
+`for`循环是最为复杂的，但也是最常用的
+
+```javascript
+for (begin; condition; step){
+  // code
+}
+```
+
+它的工作步骤为：
+
+1. 进入循环，`begin`先执行一次
+2. 检查`condition`，为真则执行循环体
+3. 然后执行`step`
+4. 一直重复 2，3 步骤，直到`condition`不满足
+
+在`begin`处声明的变量只对循环体可见，`for`语句中的任何语句段都可以省略，比如当`(;;)`时就是一个死循环
+
+`break`语句用于终止整个循环，`continue`是`break`的轻量版本，不会终止整个循环，而是终止当前的迭代，并强制执行新的一轮循环
+
+### switch
+
+switch 可以代替多个`if`，它比`if`描述的更加形象
+
+switch 至少有一个`case`代码块和一个可选的`default`代码块
+
+```javascript
+switch (x) {
+  case 'value1':
+    // code
+    break;
+  case 'value2':
+    // code
+    break;
+  default:
+    // code
+}
+```
+
+1. `x`会先和第一个`case`的值进行比较是否严格相等，然后比较第二个，以此类推
+2. 如果相等，就会执行`case`对应的代码块，直到遇到最近的`break`
+3. 如果都没有符合`case`，则执行`default`代码块
+
+`switch`和`case`允许任意表达式
+
+::: danger
+如果没有`break`，将不会检查，就会执行下一个`case`中的代码块
+:::
+
+`case`也有分组的能力
+
+```javascript
+let a = 3;
+
+switch (a) {
+  case 4:
+    alert('Right!');
+    break;
+
+  case 3: // (*) 下面这两个 case 被分在一组
+  case 5:
+    alert('Wrong!');
+    alert("Why don't you take a math class?");
+    break;
+
+  default:
+    alert('The result is strange. Really.');
+}
+```
+
+这种方式导致无论`3`还是`5`都执行的相同的代码块，且没有`break`的副作用
 
 ## 函数
 
-JavaScript 必须使用`function`关键字声明函数
+使用`function`关键字声明函数，然后通过函数名调用
 
 ```javascript
-function foo(params) {
-  return;
+function foo() {
 }
+foo();
+```
+
+由于定义的函数是被看作全局对象`window`的方法，所以也支持这种调用方式：
+
+```javascript
+function foo() {
+}
+window.foo();
+window['foo'];
 ```
 
 函数能够嵌套定义，但是内部函数必须在嵌套它的函数作用域中调用
@@ -116,37 +489,182 @@ function foo(params) {
 ```javascript
 function foo() {
   function bar() {
-    return;
   }
   bar(); // 正确
 }
-bar(); // 错误
+bar(); // ReferenceError
 ```
 
-由于定义的函数是被看作全局对象`window`的方法，所以也支持这种调用的方式：
+### 局部变量和外部变量
+
+在函数中声明的变量只在该函数内部可见
+
+```javascript
+function foo() {
+  let a = 'a';
+  console.log(a);
+}
+console.log(a); // undefined;
+```
+
+函数对定义在外部的变量拥有全部的访问权限
+
+```javascript
+let a = 'a';
+function foo() {
+  console.log(a);
+}
+console.log(a);
+```
+
+::: tip
+任何声明在函数外部的变量都被称为全局变量，可被任意函数所访问，除非被局部变量覆盖
+:::
+
+当一个函数内部中的变量和外部变量重名，那么会优先使用局部变量
+
+```javascript
+let a = 'a';
+function foo() {
+  let a = 'aa';
+  console.log(a); // aa
+}
+console.log(a); // a
+```
+
+### 参数
+
+可定义参数将任意数据传递给函数
+
+```javascript
+function foo(a) {
+  console.log(a); // a
+}
+foo('a'); 
+```
+
+如果没有提供参数，那么定义的参数默认值为`undefined`
+
+```javascript
+function foo(a) {
+  console.log(a); // undefined
+}
+foo();
+```
+
+也可以在定义参数的同时指定默认值，当没有传入数据时，就会为该参数赋予默认值
+
+```javascript
+function foo(a = 'a') {
+  console.log(a); // 'a'
+}
+foo();
+```
+
+最新的 JavaScript 语法还支持指定参数传值，不过为了兼容性，应该少使用
+
+```javascript
+function foo(a, b = 'b') {
+  console.log(a);
+  console.log(b);
+}
+foo(a='a');
+```
+
+### 返回值
+
+`return`可以出现在函数中任意位置，后面跟上返回值，甚至不带返回值也是可以的
 
 ```javascript
 function foo() {
   return;
 }
-window.foo();
-window['foo'];
+```
+
+::: tip
+空值`return`或没有`return`语句的函数返回值均为`undefined`
+:::
+
+另外，不要在`return`与返回值之间添加新的一行，这导致 JavaScript 在`return`后面直接加了`;`，不会返回后面的表达式结果
+
+```javascript
+function foo() {
+  return
+    1 + 2 + 3
+}
+console.log(foo()) // undefined
 ```
 
 ### 函数表达式
 
-也可以将一段函数表达式存储在变量中，因为没有使用标识符标记，所以是一种匿名函数，这样看起来像变量指向函数的引用一样
+函数在 JavaScript 中不是“语言结构”，而是一种特殊的值，还有另外一种创建函数的语法叫做**函数表达式**
 
 ```javascript
-var fc = function() {
-  return;
+let foo = function() {
+};
+foo();
+```
+
+函数像值一样被赋值给变量，为什么函数后面会有一个分号，因为这里它被看作一个表达式，只是一个特殊值而已，如果只写`foo`是不会调用函数的，只会返回函数的引用，所以需要`foo()`调用
+
+下面这种写法也是 OK 的，看起来就像变量存储了函数，函数可以被当作值一样传递
+
+```javascript
+function foo () {
 }
+let fc = foo;
 fc();
 ```
 
-::: tip 具名函数和匿名函数的区别
-具名函数可以无视定义的顺序调用，因为它会被解释器提前，而匿名函数只能在定义后调用，这不难理解，因为函数表达式只有赋值给变量后才能被引用。如果不是特殊用途不推荐使用函数表达式，因为阅读性较差，且定义更为繁琐
+::: tip 声明函数和函数表达式的区别
+声明函数可以无视定义的顺序调用，因为它会被解释器提前，而函数表达式只能在定义后调用，这不难理解，因为函数表达式只有赋值给变量后才能被引用。如果不是特殊用途不推荐使用函数表达式，因为阅读性较差，且定义更为繁琐
 :::
+
+### 箭头函数
+
+创建函数还有另一种非常简单的语法，且这种方式比函数表达式更好，它被称为“箭头函数”
+
+```javascript
+let foo = () => {}
+```
+
+它是下面的简单版本
+
+```javascript
+let foo = function (){}
+```
+
+箭头函数可以更简洁，当参数只有一个时，`()`可以省略，但没有参数的时候必须保留
+
+```javascript
+let double = n => {n * 2}
+console.log(double(2)); // 4
+```
+
+如果`{}`只有一行语句，也可以省略掉
+
+```javascript
+let double = n => n * 2
+console.log(double(2)); // 4
+```
+
+除此之外还有其他有趣的特性，不在这里过多描述
+
+### 回调函数
+
+既然函数可以传递，就产生了下面的写法
+
+```javascript
+function foo(bar){
+  bar();
+}
+bar(){}
+foo(bar)；
+```
+
+从这里看来，`bar`被当作参数传递给`foo`，然后在`foo`中调用，因此`bar`可以被称为**回调函数**
+
+回调函数的主要思想就是通过传递一个函数，且期望在稍后时将其进行回调
 
 ### 立即调用的函数表达式
 
@@ -285,7 +803,235 @@ document.querySelector('#eg9').innerText = parseFloat(qux)
 + isFinite()：判断一个数值是否为有限数，是就返回`true`
 + isNaN()：判断一个数值是否不是数字，是就是返回`true`
 
+## 对象
+
+对象是一种复杂的类型，用于存储更复杂的实体，JavaScript 可以使用两种方式创建对象
+
+```javascript
+let foo = new Object(); // 构造函数形式
+let bar = {}; // 字面量形式
+```
+
+这种方式是等同的，但通常使用字面量形式创建
+
+### 属性
+
+对象的属性是一种键值对形式，其中“键”位于`:`的左边，“值”在`:`的右边，属性可以在对象创建时指定，也可以在之后添加
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+}
+```
+
+可以通过`.`来访问对象的属性值，同时可以进行修改
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+}
+console.log(user.name) // "zs"
+user.name = "ls";
+console.log(user.name) // "ls"
+```
+
+添加一个属性
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+}
+user.gender = "male";
+console.log(user.gender) // "male"
+```
+
+使用`delete`移除属性
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+}
+delete user.age;
+console.log(user.age) // undefined
+```
+
+### 方括号
+
+属性值还可以是多字词语，但必须加上引号
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23,
+  "is litle boy": false
+}
+```
+
+但访问这种多字属性，`.`就没有作用了，应该使用方括号`[]`访问
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23,
+  "is little boy": false
+}
+user.is litle boy // SyntaxError
+user["is little boy"] // ok
+```
+
+方括号非常强大，甚至可以根据表达式来获取属性名，而`.`却做不了这一点
+
+```javascript
+let key = "is little boy"
+let user = {
+  name: "zs",
+  age: 23,
+  "is little boy": false
+}
+user[key] // ok
+```
+
+当然创建对象的时候也可以使用方括号
+
+```javascript
+let key = "is little boy"
+let user = {
+  name: "zs",
+  age: 23,
+  [key]: false
+}
+```
+
+这非常牛逼，意味着可以写很复杂的表达式，但是相对于`.`来说更加麻烦，所以当属性名简单就是用`.`，需要一些复杂的内容，就用方括号
+
+### 简写属性
+
+这是新特性提供的内容，当属性值和属性名相同时，即可简写
+
+```javascript
+let user = {
+  name, // 与 name: name 相同
+  age: 23
+}
+```
+
+### 属性名限制
+
+对于对象的属性来说，它并不遵守关键字以及保留字规范，那么使用这些作为键是没有问题的
+
+```javascript
+let obj = {
+  var: 1,
+  let: 2,
+  for: 3,
+  0: 4
+}
+```
+
+这是因为属性会被转换为字符串，所以无视这套规则，但除了一个名为`__proto__`的属性
+
+### 属性检测
+
+属性即使不存在，访问也不会报错，因为会动态的创建一个不存在的属性，而这个属性值默认为`undefined`，因此可以写一些代码进行检查
+
+```javascript
+let user = {};
+console.log(user.name === undefined); // true
+```
+
+但 JavaScript 提供了一个特别的检查属性是否存在的操作符`in`
+
+```javascript
+let user = {
+  name: "zs"
+};
+console.log("name" in user); // true
+console.log("age" in user); // false
+```
+
+使用字符串形式的属性，如果不这么做，JavaScript 会将该属性视为一个变量
+
+大部分情况下使用`undefined`比较就可以判断了，但是有一个例外情况，就是属性存在，且存储的值是`undefined`，所以这种对比方式有问题，但是`in`仍是对的
+
+### 遍历属性
+
+`for...in`可以遍历一个对象的所有键，这和`for`循环是不一样的东西
+
+```javascript
+for (key in object){
+  // 每遍历一个键就执行的代码
+}
+```
+
+比如
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+};
+
+for (let key in user) {
+  console.log(key); // name, age
+}
+```
+
+### 属性的排序
+
+遍历键时会按照一定的顺序排序，对于整数属性来说，会按照小到大进行排序
+
+```javascript
+let codes = {
+  "3": 3,
+  "2": 2,
+  "4": 4,
+  "1": 1
+}
+
+for (let key in codes) {
+  console.log(key); // "1", "2", "3", "4"
+}
+```
+
+对于其他类型的键来说，会按照创建的顺序进行排序
+
+注意，必须是整数，像`+1`、`-2`就不行，如果想要使用整数属性，且必须按照创建的顺序进行排序，应该采用这种方式来欺骗程序，因为它无法转换为真正的整数
+
+### 对象的引用
+
+与原始类型相比，对象的根本区别在于，对象是通过“引用”来访问的
+
+```javascript
+let foo = "balabala";
+let bar = foo;
+foo = "moximoxi";
+console.log(bar); // balabala
+```
+
+这是原始类型的存储和复制，拷贝过来的值是独立的，不会被后续的操作所影响，但对象不是这样的
+
+```javascript
+let user = {
+  name: "zs"
+}
+
+let admin = user;
+console.log(admin.name); // "zs"
+user.name = "ls";
+console.log(admin.name); // "ls"
+```
+
+这个例子说明对象之间的拷贝不是独立的，两个变量都保存着同一份对象的引用，当使用任意一个变量操作对象时，另一个变量也会受到影响，相当于这个对象有两个名字而已
+
+对对象进行比较时，实际上比较的是引用，由于两个变量都保存的同一个引用，所以它们相等，这也说明引用相等，那么对象就是相等的
+
 ## 严格模式
+
+JavaScript 是不断发展的，但没有带来任何兼容性的问题，即使新的特性被加入，旧的特性也不会改变，这么做有利于兼容旧代码，但 JavaScript 中设计的不合理的地方也被保留了下来，这种情况一直持续到 ES5 出现
 
 严格模式是 ES5 新增的功能，虽然 ES5 可以向后兼容，如果使用严格模式，那么将会被禁止一些不再建议使用的语法，这样消除了 JavaScript 语法的一些不合理，不严谨的地方。如果在第一行声明了`"use strict"`字符串，则代表全局范围使用严格模式，也可以在函数内的第一行中使用，这样就是局部的严格模式。严格模式的兼容性非常好，在一些不被支持的浏览器中，它只会被看作一个字符串，可以大胆使用
 
