feat: updates some notes and changes

--- a/docs/language/c/4.md
+++ b/docs/language/c/4.md
@@ -1,85 +1,65 @@
 ---
-title: 结构体与联合体
+title: 指针
 category: 编程语言
 tag: C
 author: JQiue
 article: false
 ---
 
-在实际情况中，单纯的用一个变量来描述一个对象是不够的，因为一个对象可以有多个属性，不可能只用一个变量描述，C 语言提供了结构体和共用体来解决这些复杂的数据类型
+指针是 C 语言的灵魂，也可以说指针就是 C 语言的门面，指针简单来说就是一种特殊的变量，和普通变量不同的是，指针变量存储的是另一个变量的地址，而普通变量存储的只是一个实际的值，站在内存的角度来看，通过地址就能访问数据，那么指针也就能间接访问某个变量中的数据
 
-## 结构体
-
-结构体是不同类型变量的集合，它跟数组相反，数组是相同类型的集合，通过关键字`struct`来声明一个结构体
+定义一个指针变量和定义一个普通变量一样，只不过前面要加上`*`来表示它是一个指针变量，当然指针也是具有类型的，不同类型的变量要用不同的类型的指针
 
 ```c
-struct obj {
-  char name[10];
-  int age;
-};
+int *p;
 ```
 
-然而这仅仅只是一个声明，实际上它的使用过程和声明变量一样，只不过是用自定义的类型来声明一个变量
+指针变量有了，那么如何取出其他变量的地址呢？
 
-第一种定义方式
-
-```c
-int main(){
-  struct obj person;
-}
-```
-
-第二种定义方式，直接声明的同时定义，但是这样写就不能够通过该类型定义其他变量了
+通过`&`运算符就可以取出某个变量的地址，将地址赋值给指针变量就行了
 
 ```c
-struct obj {
-  char name[10];
-  int age;
-}person;
-```
-
-### 初始化和访问成员
-
-结构体类型的初始化可以在定义的时候初始化，和数组有些类似，也可以通过`.`运算符来赋值初始化，`.`运算符也可以访问成员变量
-
-```c
-struct obj person = {"jqiue", 21}; // 声明变量时初始化
-person.name = "jqiue";  // 通过 . 运算符赋值
-printf("%s", person.name); // 通过 . 运算符访问
-```
-
-更妙的是，还可以通过结构体类型来定义一个数组，这个数组中每一个元素都是结构体类型
-
-```c
-struct obj persons[2] = {{"zs", 23}, {"ls", 24}};
-person[0].name; // 像数组那样通过下表访问每个结构体
-```
-
-### 结构体和指针
-
-既然结构体是用户自定义的数据类型，那么指针变量也能够指向结构体变量的地址
-
-```c
-struct obj *o; // 定义一个结构体指针
-o = &person; // 取出结构体变量的地址交给指针
-(*o).name; // 通过指针间接访问结构体成员，注意的是必须加上()，因为 . 运算符的优先级高于 * 运算符
-o->name;  // 为了解决上面的写法问题，C 语言提供了 -> 运算符来帮助简写，这和上面是等价的
+int *p;
+int a = 3;
+p = &a; // 取出变量a的地址交给指针p
 ```
 
 ::: tip
-结构体只是一个创建变量的模板，并不占用内存空间，而结构体中的变量才是真正存放数据的地方，需要空间来存储
+& 运算符的操作数必须是变量，取出来的地址大小取决于编译器和系统架构
 :::
 
-## 共用体
-
-共用体也叫联合体，通过关键字`union`来创建，它和结构体是类似的，区别在于共用体的变量成员是共用一块内存空间的，相对于结构体更节省内存空间，占用字节取决于成员变量中最长的哪个，但是也带了一个问题，修改了一个成员就会影响其他成员
+这个指针已经指向了那个变量，就可以通过`*`运算符来访问数据
 
 ```c
-union data {
-  int a;
-  char b;
+printf("%d", *p); // 通过指针访问上述code中变量存储的数据
+printf("%d", a); // 它和指针访问是等效的
+```
+
+::: tip
+定义变量时的`*`和表达式中的`*`是不同的
+:::
+
+## 指针的运算
+
+指针变量的运算实际上是地址的运算，C 语言规定一个地址加上或减去一个整数 n，其运算结果仍然是一个地址
+
+## 数组与指针
+
+数组本身就表达地址，因此数组的地址不需要用`&`取出，但数组的元素表达的是变量，需要使用取地址符
+
+因此`[]`运算符可以对数组变量做，也可以对指针变量做
+
+如果把一个数组当作参数传递给一个函数，这个函数接收的也是一个指针，所以要定义指针变量接收
+
+```c
+int foo(int *arr){
+  return 0;
 }
-union data d;
-d.a = 3;
-d.b; // 实际上等于 d.a，所以输出的时候应该按照d.a的数据类型输出
+int main(){
+  int arr[3] = {1, 2, 3};
+  int *p;
+  p = arr; // 数组名即指针地址
+  foo(arr); // 接收数组时，需要在函数中定义指针变量接收
+  return 0;
+}
 ```
