--- a/docs/language/js/3.md
+++ b/docs/language/js/3.md
@@ -1,347 +1,519 @@
 ---
-title: 面向对象编程
+title: 对象
 category: 编程语言
 tag: JavaScript
 author: JQiue
 article: false
 ---
 
-## 创建类
-
-JavaScript 并不是像其它语言一样通过`class`关键字来定义类，而是通过构造器函数的方式来创建类的实例：
+对象是一种复杂的类型，用于存储更复杂的实体，JavaScript 可以使用两种方式创建对象
 
 ```javascript
-function Person() {}
-var foo = new Person();
+let foo = new Object(); // 构造函数形式
+let bar = {}; // 字面量形式
 ```
 
-## 实例化对象
+这种方式是等同的，但通常使用字面量形式创建
 
-通过`new`关键字配合函数的调用产生了对象的实例，JavaScript 虽然使用的类来实现面向对象编程，但是类却由构造器来定义，而构造器使用函数来实现，比如`Person()`。按照定义，一个类有自己的属性和方法，而 JavaScript 是动态的，因此能够在类被实例化后动态的为对象添加属性和方法：
+## 属性
+
+对象的属性是一种键值对形式，其中“键”位于`:`的左边，“值”在`:`的右边，属性可以在对象创建时指定，也可以在之后添加
 
 ```javascript
-foo.age = 18;
-foo.say = functioin (){
-  console.log('我是 foo');
+let user = {
+  name: "zs",
+  age: 23
 }
 ```
 
-## 声明属性和方法
-
-也可以通过`this`关键字在构造器中定义属性和方法，这样初始化的时候就会自带一些属性和方法：
+可以通过`.`来访问对象的属性值，同时可以进行修改
 
 ```javascript
-function Person() {
-  this.name = 'foo';
-  this.age = '18';
-  this.showInfo(){
-    console.log('我叫' + this.name，'我的年龄是' + this.age);
-  }
+let user = {
+  name: "zs",
+  age: 23
+}
+console.log(user.name) // "zs"
+user.name = "ls";
+console.log(user.name) // "ls"
+```
+
+添加一个属性
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+}
+user.gender = "male";
+console.log(user.gender) // "male"
+```
+
+使用`delete`移除属性
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+}
+delete user.age;
+console.log(user.age) // undefined
+```
+
+## 方括号
+
+属性值还可以是多字词语，但必须加上引号
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23,
+  "is litle boy": false
 }
 ```
 
-::: danger this 的指向
-如果一个函数被当作构造器使用，那么`this`永远指向当前实例对象，否则指向全局对象`window`
-:::
-
-类的属性可以通过构造器的参数传递
+但访问这种多字属性，`.`就没有作用了，应该使用方括号`[]`访问
 
 ```javascript
-function Person(name, age) {
-  this.name = name;
-  this.age = age;
-  this.showInfo(){
-    console.log('我叫' + this.name，'我的年龄是' + this.age);
-  }
+let user = {
+  name: "zs",
+  age: 23,
+  "is little boy": false
 }
-var foo = new Person('foo', 18);
+user.is litle boy // SyntaxError
+user["is little boy"] // ok
 ```
 
-所有的实例对象都有一个`constructor`属性指向构造器，如果对实例使用`constructor`，将会返回构造器的引用，于是就有了下面的写法：
+方括号非常强大，甚至可以根据表达式来获取属性名，而`.`却做不了这一点
 
 ```javascript
-function Person(name, age) {
-  this.name = name;
-  this.age = age;
-  this.showInfo = function (){
-    console.log('我叫' + this.name + '我的年龄是' + this.age);
-  }
+let key = "is little boy"
+let user = {
+  name: "zs",
+  age: 23,
+  "is little boy": false
 }
-var foo = new Person('foo', 18);
-var bar = new foo.constructor();
+user[key] // ok
 ```
 
-### prototype 定义属性和方法
-
-除了在构造器中定义属性和方法以外，还可以通过`prototype`定义，每一个构造器都有`prototype`属性，这个属性是静态的，无需实例化，一旦通过`prototype`定义了属性或方法，所有的实例对象都可以使用
+当然创建对象的时候也可以使用方括号
 
 ```javascript
-function Person(name, age) {
-  this.name = name;
-  this.age = age;
-  this.showInfo = function () {
-    console.log('我叫' + this.name + '我的年龄是' + this.age);
-  }
+let key = "is little boy"
+let user = {
+  name: "zs",
+  age: 23,
+  [key]: false
 }
-Person.prototype.gender = null;
-Person.prototype.sayHello = function () {
+```
+
+这非常牛逼，意味着可以写很复杂的表达式，但是相对于`.`来说更加麻烦，所以当属性名简单就是用`.`，需要一些复杂的内容，就用方括号
+
+## 简写属性
+
+这是新特性提供的内容，当属性值和属性名相同时，即可简写
+
+```javascript
+let user = {
+  name, // 与 name: name 相同
+  age: 23
+}
+```
+
+## 属性名限制
+
+对于对象的属性来说，它并不遵守关键字以及保留字规范，那么使用这些作为键是没有问题的
+
+```javascript
+let obj = {
+  var: 1,
+  let: 2,
+  for: 3,
+  0: 4
+}
+```
+
+这是因为属性会被转换为字符串，所以无视这套规则，但除了一个名为`__proto__`的属性
+
+## 属性检测
+
+属性即使不存在，访问也不会报错，因为会动态的创建一个不存在的属性，而这个属性值默认为`undefined`，因此可以写一些代码进行检查
+
+```javascript
+let user = {};
+console.log(user.name === undefined); // true
+```
+
+但 JavaScript 提供了一个特别的检查属性是否存在的操作符`in`
+
+```javascript
+let user = {
+  name: "zs"
+};
+console.log("name" in user); // true
+console.log("age" in user); // false
+```
+
+使用字符串形式的属性，如果不这么做，JavaScript 会将该属性视为一个变量
+
+大部分情况下使用`undefined`比较就可以判断了，但是有一个例外情况，就是属性存在，且存储的值是`undefined`，所以这种对比方式有问题，但是`in`仍是对的
+
+## 遍历属性
+
+`for...in`可以遍历一个对象的所有键，这和`for`循环是不一样的东西
+
+```javascript
+for (key in object){
+  // 每遍历一个键就执行的代码
+}
+```
+
+比如
+
+```javascript
+let user = {
+  name: "zs",
+  age: 23
+};
+
+for (let key in user) {
+  console.log(key); // name, age
+}
+```
+
+## 属性的排序
+
+遍历键时会按照一定的顺序排序，对于整数属性来说，会按照小到大进行排序
+
+```javascript
+let codes = {
+  "3": 3,
+  "2": 2,
+  "4": 4,
+  "1": 1
+};
+
+for (let key in codes) {
+  console.log(key); // "1", "2", "3", "4"
+}
+```
+
+对于其他类型的键来说，会按照创建的顺序进行排序
+
+注意，必须是整数，像`+1`、`-2`就不行，如果想要使用整数属性，且必须按照创建的顺序进行排序，应该采用这种方式来欺骗程序，因为它无法转换为真正的整数
+
+## 对象的引用
+
+与原始类型相比，对象的根本区别在于，对象是通过“引用”来访问的
+
+```javascript
+let foo = "balabala";
+let bar = foo;
+foo = "moximoxi";
+console.log(bar); // balabala
+```
+
+这是原始类型的存储和复制，拷贝过来的值是独立的，不会被后续的操作所影响，但对象不是这样的
+
+```javascript
+let user = {
+  name: "zs"
+};
+
+let admin = user;
+console.log(admin.name); // "zs"
+user.name = "ls";
+console.log(admin.name); // "ls"
+```
+
+这个例子说明对象之间的拷贝不是独立的，两个变量都保存着同一份对象的引用，当使用任意一个变量操作对象时，另一个变量也会受到影响，相当于这个对象有两个名字而已
+
+对象之间进行比较时，实际上比较的是引用，由于两个变量都保存的同一个引用，所以它们相等，这也说明引用相等，那么对象就是相等的
+
+```javascript
+let user = {};
+let userClone = user;
+console.log(user == cloneUser); // true
+console.log(user === cloneUser); // true
+```
+
+如果想要拷贝一个对象，但是简单的赋值操作会创建一个相同对象的引用，可以通过遍历对象现有的属性结构，将之赋值给新的对象
+
+```javascript
+let user = {
+  name: 'zs',
+  age: 23
+};
+
+let cloneUser = {};
+for (let key in user) {
+  cloneUser[key] = user[key];
+}
+
+console.log(user == cloneObj); // false
+```
+
+当然，JavaScript 提供了`Object.assign`方法达到同样的效果，`Object.assign(dest, [src1, src2, ...])`，该方法会将第二个参数中所有对象的属性都拷贝到第一个参数的对象中，如果属性存在，那么它会被覆盖
+
+```javascript
+let user = {
+  name: 'zs'
+};
+
+let foo = {canView: true};
+let bar = {canEdit: true};
+
+Object.assign(user, foo, bar);
+console.log(user); // user = {name: 'zs', canView: true, canEdit: true}
+```
+
+这种方式都是简单的拷贝叫做浅拷贝，但是对象的属性也可以是对其他对象的引用，很显然用这种方式已经不行了，为了解决这样的问题，就必须检查每个属性值，如果是一个对象，那么也要同样的复制它的结构，这种叫做“深拷贝”，可以使用各种方式来实现，比如“递归”，但是不要自己造轮子，因为有很多 JavaScript 库实现了该需求，比如 lodash 中的`_.cloneDeep(obj)`
+
+## 对象的方法
+
+对象通常是用来表示真实世界中的实体，在现实世界中，用户可以进行一些操作行为，那么在 JavaScript 中，行为由属性中的函数表示
+
+```javascript
+let user = {
+  name: 'zs',
+  age: 23
+};
+
+user.sayHello = function () {
   console.log('hello');
 }
-var foo = new Person('foo', 18);
-foo.sayHello();
+
+user.sayHello(); // hello
 ```
 
-### \_\_proto\_\_ 定义属性和方法
-
-每个实例都有个`__proto__`属性指向创建它的构造器的`prototype`属性，于是产生了这种写法：
+作为对象属性的函数被称为方法，这里是在对象创建后才指定的一个函数作为方法，当然也可以在创建时指定
 
 ```javascript
-function Person(name, age) {
-  this.name = name;
-  this.age = age;
-  this.showInfo = function () {
-    console.log('我叫' + this.name + '我的年龄是' + this.age);
+let user = {
+  name: 'zs',
+  age: 23,
+  sayHello: function(){
+    console.log('hello');
   }
+};
+```
+
+这种声明方式可以被简写，也就是去掉了`function`
+
+```javascript
+let user = {
+  name: 'zs',
+  age: 23,
+  sayHello (){
+    console.log('hello');
+  }
+};
+```
+
+## 方法中的 this
+
+通常情况下，对象中的方法都是访问对象中存储的信息来完成相关操作
+
+```javascript
+let user = {
+  name: 'zs',
+  sayName () {
+    console.log(user.name);
+  };
+};
+
+user.sayName(); // 'zs'
+```
+
+但是这种方式存在一些问题
+
+```javascript
+let user = {
+  name: 'zs',
+  sayName () {
+    console.log(user.name);
+  }
+};
+
+let admin = user;
+user = null;
+admin.sayName(); // TypeError: Cannot read property 'name' of null
+```
+
+这样的代码是不可靠的，那么`this`就是这种问题的解决方案，因为`this`永远代表着调用该方法的对象
+
+```javascript
+let user = {
+  name: 'zs',
+  sayName () {
+    console.log(this.name); // 替换为 this
+  }
+};
+
+let admin = user;
+user = null;
+admin.sayName(); // 'zs'
+```
+
+不同于其他编程语言，`this`在 JavaScript 中可以用于任意函数，而不仅仅是对象的方法
+
+```javascript
+function sayHi() {
+  console.log(this.name);
 }
-var foo = new Person('foo', 18);
-foo.__proto__.run = function () {
-  console.log('我可以动');
+```
+
+上面的代码不会报错，因为`this`的值会在运行时计算出来，取决于代码的上下文
+
+```javascript
+function sayHi() {
+  console.log(this.name);
 }
-var bar = new Person('bar', 22);
-bar.run();
+
+let user = { name: 'zs' };
+let admin = { name: 'admin' };
+
+user.sayHi = sayHi;
+admin.sayHi = sayHi;
+
+user.sayHi(); // 'zs'
+admin.sayHi(); // 'admin'
+```
+
+在上述代码中，`this`正确的发挥了它的作用：`this`的取值根据代码上下文决定
+
+但在严格模式下，`this`等于`undefined`，在非严格模式下`this`会是全局对象（浏览器中的window）
+
+另外提到一点，箭头函数中是没有`this`的，如果在箭头函数中引用了`this`，那么`this`的值取决于外部的函数，这是箭头函数的一个特性，如果不想要一个独立的`this`，反而想从上下文中获取，它非常有用
+
+## 对象构造器
+
+常规的`{...}`语法虽然允许创建一个对象，但是大多数情况下，都需要创建许多类似的对象，这可以使用构造函数和`new`操作符实现
+
+构造函数就是一个普通的函数，没什么区别，可以被当作普通函数调用，也可以当作构造器产生一个对象，一般构造函数的命名是以大写开头的
+
+```javascript
+function User(name){
+  this.name = name;
+}
+
+let user = new User('zs');
+console.log(user.name); // zs
+```
+
+`new User()`做了很多工作：创建一个新的对象分配给`this`，执行函数体，返回`this`的值
+
+它和`{...}`语法创建的对象是差不多的
+
+```javascript
+let user = {
+  name: 'zs'
+}
+```
+
+构造函数的目的是实现可重用的对象创建代码，比使用字面量对象更加简短
+
+从技术上来讲，任何一个函数都可以通过`new`来运行，”首字母大写“是一个约定，用于区分构造函数和普通函数
+
+一般来说构造函数是没有`return`语句的，如果有`return`语句，就分为两种情况：
+
+1. 如果返回的是一个对象，则返回该对象，而不是`this`
+2. 如果返回的是原始类型，则忽略，继续返回`this`
+
+```javascript
+function User(name) {
+  this.name = name;
+  return {};
+}
+
+let user = new User('zs');
+console.log(user.name); // undefined
 ```
 
 ::: tip
-最好将新功能添加到构造器的`prototype`属性，因为它会被所有的实例对象共享
+如果构造器没有参数，可以省略`new`后面的括号，但最好不要这么做，虽然规范上允许
 :::
 
-## Object
-
-并非所有的类都必须通过`new`运算符来实例化，也可以使用`Object`来实例化一个对象
+在构造器中也是可以定义方法的
 
 ```javascript
-var foo = new Object({
-    name: 'foo',
-    age: 22,
-    show: function () {
-      console.log('我叫' + this.name + '我的年龄是' + this.age);
-  }
-});
-
-var bar = {
-  name: 'bar',
-  age: 18,
-  show: function () {
-    console.log('我叫' + this.name + '我的年龄是' + this.age);
-  }
-}
-```
-
-这两种写法都是等效的，无论是`new Object`，还是通过`{}`创建的实例都是属于`Object`，这是一种键值对写法，通过这种方式创建出来的叫做**字面量对象**
-
-## 构造器配合 Object 定义属性和方法
-
-为构造器的`prototype`定义属性或方法，实例都可获得，那么说明`prototype`指向的也是一个对象，因此可以让`prototype`重新指向一个新对象就可以实现定义属性和方法：
-
-```javascript
-function Person() {}
-Person.prototype = {
-  name: 'foo';
-  age: 18;
-  show: function () {
-    console.log('我叫' + this.name + '我的年龄是' + this.age);
-  }
-}
-var foo = new Person();
-```
-
-## 只读和只写属性
-
-在面向对象编程中，属性往往是无法直接读写的，如果想要实现单独的控制就应该使用一些办法来屏蔽外部直接访问属性的接口，通过`this`和`prototype`定义的属性都是可以被读写的，所以应该使用`var`来定义属性，因为`var`定义的属性是有局部作用域的，变相的实现了私有属性，然后通过方法来实现属性的读写
-
-```javascript
-function Person() { 
-  var name = null;
-  this.getName = function(){
-    return name;
-  }
-  this.setName = function(value){
-    name = value;
-  }
-}
-var foo = new Person();
-foo.setName('foo');
-foo.getName();
-foo.name // Error
-```
-
-## this
-
-在类中，`this`一般指向自己的实例，`this`的行为和当前类的实例变量一样。但是`this`会在方法内的嵌套函数中形成一个新的环境，在这里的`this`会指向全局对象`window`，而不是对象的实例
-
-```javascript
-function Foo() { 
-  this.method = function(){
-    function test(){
-      console.log(this);  // window
-    }
-    test();
-  }
-}
-```
-
-因此想要在嵌套函数中使用实例的`this`，最好使用中间变量引用一下：
-
-```javascript
-function Foo() { 
-  this.method = function(){
-    var that = this;
-    function test(){
-      console.log(that);  // Foo
-    }
-    test();
-  }
-}
-```
-
-::: tip
-如果构造器不是通过`new`来创建类的实例，而是当作函数一样调用，那么`this`也不会指向
-:::
-
-## 静态方法
-
-通过`prototype`定义的方法叫实例方法，实例方法要通过一个变量指向构造函数的新对象，而静态方法则可以直接在构造器上定义，因为函数本身就是一个对象：
-
-```javascript
-function Foo() {}
-Foo.a = function name() {
-  console.log('static method a');
-}
-Foo.a();
-```
-
-静态方法是属于类的方法，不能通过实例来调用，而是直接使用类来调用
-
-## 成员访问
-
-对于一个类来说，应该限制对类成员的直接访问，这样一个程序才更加可靠，在一些情况下需要将一些成员指定为私有的，使用`this`和`prototype`定义的属性和方法都是公共成员，使用普通的定义方式就可以声明私有成员，定义私有成员有助于封装数据
-
-## 继承
-
-JavaScript 是通过`prototype`来实现继承的，要想继承一个类，可以使用`prototype`指向该类的实例：
-
-```javascript
-function Person(name , age){
+function User(name) {
   this.name = name;
-  this.age = age;
+  this.sayName = function() {
+    console.log(this.name);
+  };
 }
-function Child(){}
-Child.prototype = new Person();
-var zs = new Child();
-zs.name = 'zs'; // zs
+
+let zs = new User('zs');
+zs.sayName(); // 'zs'
 ```
 
-如果想在创建子类实例的时候赋予初始值，则应该手动在子类中写调用父类的构造器方法来实现
+这里稍微提一下，构造器中不能够使用简化方法，因为无法通过语法检查，只能用于字面量对象
+
+在一个函数内部，可以使用`new.target`来检查该函数是否被`new`调用，还是常规调用
 
 ```javascript
-function Person(name , age){
-  this.name = name;
-  this.age = age;
+function Foo() {
+  console.log(new.target);
 }
-function Child(name, age){
-  this.$super = Person;
-  this.$super(name, age);
-}
-Child.prototype = new Person();
-var zs = new Child('zs', 23);
-zs.name; // zs
+Foo(); // undefined
+new Foo(); // Function: Foo
 ```
 
-`super`是 JavaScript 中的保留字，不能作为标识符使用。很多语言都定义了`super()`方法来实现调用父类的构造器，但是`JavaScript`没有定义这种方法，所以要手动实现`super()`方法。由于 JavaScript 所有的类都是由`Object`派生的，只要为`Object`定义一个`$super()`，就可以作用于所有的类
+如果作为常规调用`new.target`则为`undefined`，所以这种方式可以让一个函数以不同的调用方法进行不同的工作
+
+## 可选链
+
+可选链操作符用于解决连接对象链深处的属性值，不必验证每一个引用是否有效，比如一个对象`user`，大多数用户的地址存储在`user.address`中，街道地址存储在`user.address.street`中，但有些用户没有提供街道信息
+
+在这种情况下，如果用户没有提供`user.address`，当尝试访问`user.address.street`会得到一个错误
 
 ```javascript
-Object.prototype.$super = function () {
-  var result;
-  try {
-    result = eval(this.constructor).prototype.constructor;
-    // 调用基类的构造器方法
-    result.apply(this, arguments);
-  } catch (error) {
-    // 如果不是内建类或者自定义类，或者不在构造器中调用该方法，那么抛出错误
-    throw new Error("only can be used in constructor!");
-  }
-}
-function Person(name , age){
-  this.name = name;
-  this.age = age;
-}
-function Child(name, age){
-  // this.$super = Person;
-  this.$super(name, age);
-}
-Child.prototype = new Person();
-var zs = new Child('zs', 23);
-zs.name; // zs
+let user = {}
+console.log(user.address.street); // TypeError: Cannot read property 'street' of undefined
 ```
 
-## 组合类
+这是显然易见的，因为`user.address`的返回结果是`undefined`，访问`user.address.street`当然会失败，但是在很多场景中，并不需要这种错误，更加希望得到的是`undefined`
 
-当一个类无法形成继承关系，则无法使用继承来重用类，但是一个类的属性可以是另一个类，也就是说，一个类的成员含有一个或多个类的对象，这种结构的类就叫组合类
+一般的解决方式是使用`if`或条件运算符`?`来对值进行检查
 
 ```javascript
-function Window() {
-  this.open = function () { }
-  this.close = function () { }
+let user = {}
+if (user.address) {
+  console.log(user.address.street);
+} else {
+  console.log(undefined);
 }
-function Door() {
-  this.open = function () { }
-  this.close = function () { }
-}
-
-function House() {
-  this.openWindow = function () {
-    var window = new Window();
-    window.open();
-  }
-  this.closeWindow = function () {
-    var window = new Window();
-    window.close();
-  }
-  this.openDoor = function () {
-    var door = new Door();
-    door.open();
-  }
-  this.openDoor = function () {
-    var door = new Door();
-    door.close();
-  }
-}
+console.log(user.address?user.address.street:undefined)
 ```
 
-类的组合符合真实世界的开发方式，在真实世界中，一个对象由更多的小对象组成，`Window`类和`Door`不仅仅可以组合成`House`类，也可以组成`Car`类
+这种写法虽然解决了错误，但是不够优雅，如果访问的属性更加深入，这就是问题了，写出来的代码令人难以理解
 
-## 静态成员
-
-静态成员指不需要实例化就可以访问到成员，也被称为类成员，而非静态成员需要实例化才能访问，所以被称为实例成员，如果一个类所有的成员都是静态的，那么这个类就是静态类
-
-之所以定义静态成员，是因为某些对象的一些特定行为是不会改变的，比如太阳和月亮都是世间唯一的，谈不上个体，因此无需实例化。如果在更广泛的特定下，太阳和月亮都属于行星，它们都属于行星类的一个个体。
-
-有一些类虽然可以实例化，但是其中的某一些属性和方法也具有一定的唯一性，这些都应该被定义为静态成员。如果想要将成员声明为静态的，则直接将静态成语赋值给类本身
+这就是可选链`?.`加入的原因，只是替代了`.`调用，当前面的引用是`undefined`或`null`，他会停止继续调用，立即返回该部分
 
 ```javascript
-function Person(name, age) {
-  this.name = name;
-  this.age = age;
-}
-Person.gender = '男';
-Person.showGender = function () {
-  console.log('我的性别是' + this.gender);
-}
-Person.showGender();
+let user = {};
+console.log(user?.address?.street) // undefined
 ```
 
-静态成员是一般是公共成员，但是静态成员不能够被继承，因为它属于类，而不属于实例对象
+这样的写法简洁明了，且就算`user`不存在，也没有关系，但是从逻辑上来讲，`user`对象是肯定存在的，所以不要过度的使用可选链，应改为`user.address?.street`
 
 ::: danger
-静态方法只能访问静态属性，不能访问实例属性
+`?.`前面的变量必须是已声明的，否则会触发一个错误
+:::
+
+可选链也有”短路效应“，当左边部分不存在就会终止后面的所有代码允许
+
+可选链不是一个运算符，而是一个特殊的语法结构，它还可以与函数和方括号一起使用
+
+```javascript
+let user = {};
+user?.['name']; // 访问不存在的属性
+user.sayHi?.(); // 调用不存在的方法
+```
+
+可选链会检查左边的部分，如果存在才会运行右边的操作部分
+
+::: tip
+可选链不能成为被赋值的部分，这会抛出一个错误
 :::
