--- a/docs/language/js/4.md
+++ b/docs/language/js/4.md
@@ -1,5 +1,5 @@
 ---
-title: ES6 新特性
+title: 数组
 category: 编程语言
 tag: JavaScript
 author: JQiue
@@ -7,6 +7,68 @@ article: false
 ---
 
 
+虽然对象允许储存数据，但对象中的属性是没有顺序的，有很多时候需要一个有序集合的结构，里面的元素是按照顺序排列的，数组（Array）就是这样的结构
 
+## 声明
 
+创建数组有两种语法：
 
+```javascript
+let arr = new Array();
+let arr = [];
+```
+
+通常使用第二种方式，可以在`[]`添加初始的元素：
+
+```javascript
+let names = ['zs', 'ls', 'ww'];
+```
+
+并通过下标访问对应的元素，从`0`开始
+
+```javascript
+names[0]; // 'zs'
+names[1]; // 'ww'
+```
+
+甚至可以替换元素
+
+```javascript
+names[2] = 'zz'; // ['zs', 'ls', 'zz']
+```
+
+也可以新增一个元素
+
+```javascript
+nams[3] = 'zq'; // ['zs', 'ls', 'zz', 'zq']
+```
+
+且可以存储任何类型的元素
+
+```javascript
+let arr = [1, 'zs', {name: 'foo'}, true , function(){} ];
+```
+
+## length
+
+length 不是数组的长度，而是最大索引值加`1`，会随着数组的修改而自动更新
+
+## 方法
+
+队列方法
+
++ `push`：数组末端添加一个元素
++ `shift`：数组首端取出一个元素
+
+栈方法
+
++ `push`：数组末端添加一个元素
++ `pop`：数组末端取出一个元素
+
+JavaScript 中的数组既可以是队列，也可以是栈
+
+## 数组是一种特殊的对象
+
+## 遍历
+
+## 多维数组
