--- a/docs/subject/english/1.md
+++ b/docs/subject/english/1.md
@@ -51,3 +51,17 @@ article: false
 3. 表示动作的语气：
 
 将1，2 合在一起称为时态（tense），英语的时态就是时间+状态合在一起，而并非只有时间，将这些自由排列组合，理论上就有 16 种可能的时态
+
+3 叫做动词的语气，和平时说话的那个“语气”不是同一个“语气”，这是语法中的“语气”，比如虚拟语气，用来表示意愿，和事实相反的假设等
+
+虽然动词这么厉害，但是英语中的谓语动词本身往往是不能够独立完成刚才说的那些功能，比如不能独自完成否定，可能性，必须性等意思，想要充分发挥谓语动词，就必须用到另一类经常和动词一起出现的词帮助完成任务，它们就是“助动词”（auxiliary verbs），比如“吃”这个动词，为了表示它吃过了，完成的状态，就要用到助动词“have”，为了协助它表示正在吃，进行的状态，就要用到助动词“be”，为了协助它表示“被”吃，就要用到助动词“be”，为了协助它表示有能力吃，就要用到助动词“can” ，为了协助它表示有可能吃就要用到助动词“might”，为了协助它表示有义务吃，就要用到助动词“must”，为了协助它表示否定不吃，就要用到助动词“do”
+
+很多助动词特别喜欢伪装，它们除了做助动词（没有实际意义，只是帮助谓语动词），甚至还可以做实意动词，甚至其他词性，比如“can”还可以是“易拉罐”，“might”还可以是力量，“must”可以是“发霉”，“do”可以是“做某事”，“have”可以是“拥有”，“be”可以是“存在”，这些都是恰恰让人混乱的地方，千万不要把助动词和它其他的身份弄混淆
+
+为什么非要叫“谓语动词”，不能光叫“动词”，这是因为，还有所谓的“非谓语动词”，动词不仅可以充当谓语，还可以充当句子中的其他成分，只不过需要把谓语动词修改一下，改成“非谓语动词”，不仅如此，非谓语动词几乎可以取代所有的从句，从而简化句子，只不过这样的动词就不再具有表示动作时间、状态、语态、语气的动能，以不同的形式出现在句中，包括“动词不定式”，“现在分词”，“动名词”，“过去分词”
+
+非谓语动词也有一些麻烦的地方，比如动词不定式和动词原形一样，如果没有上下文是无法区分的，现在分词和动名词和谓语动词的进行状态一样，没有上下文也无法区分，过去分词和谓语动词的完成状态一样，没有上下文也无法区分，所以说非谓语动词也是英语语法中的难点
+
+总结一下，英语的核心就是动词，动词能够串联几乎所有的语法概念
+
+动词分为谓语动词和非谓语动词，谓语动词分为五种，分别决定了简单句的 5 种基本句型，同时囊括了一些句子成分，简单句可以组成并列关系的复合句以及从属关系的复杂句，后者包括主句和从句，从句可以充当所有句子成分，而句子成分可以由不同的词类充当，同时，谓语动词可以表达动作的时间、状态、语气等，但是需要用到助动词，非谓语动词可以视为改动后的谓语动词，可以充当除了谓语动词外的所有句子成分，取代几乎所有从句，简化句子
