--- a/docs/language/c/3.md
+++ b/docs/language/c/3.md
@@ -1,65 +1,51 @@
 ---
-title: 指针
+title: 数组和字符串
 category: 编程语言
 tag: C
 author: JQiue
 article: false
 ---
 
-指针是 C 语言的灵魂，也可以说指针就是 C 语言的门面，指针简单来说就是一种特殊的变量，和普通变量不同的是，指针变量存储的是另一个变量的地址，而普通变量存储的只是一个实际的值，站在内存的角度来看，通过地址就能访问数据，那么指针也就能间接访问某个变量中的数据
-
-定义一个指针变量和定义一个普通变量一样，只不过前面要加上`*`来表示它是一个指针变量，当然指针也是具有类型的，不同类型的变量要用不同的类型的指针
-
 ```c
-int *p;
+int arr[3];
+float arr[5];
 ```
 
-指针变量有了，那么如何取出其他变量的地址呢？
+数组的初始化是在编译阶段进行的
 
-通过`&`运算符就可以取出某个变量的地址，将地址赋值给指针变量就行了
+1. 完全初始化：即数组多长就给多少个初始化值
+2. 部分初始化：只给了少于数组长度的初始化值，没有被初始化的部分会被赋值为 0
+3. 没有初始化
 
 ```c
-int *p;
-int a = 3;
-p = &a; // 取出变量a的地址交给指针p
+int arr1[3] = {1, 2, 6};
+int arr2[3] = {3};
+int arr3[3];
+```
+
+::: danger 数组的越界访问
+C 语言不会检查数组的越界访问，使用数组索引范围之外的索引值并不会报错
+:::
+
+### 二维数组
+
+数组中的每一个元素也可以是一个数组，因此就有了多维数组的存在，最常用的是二维数组
+
+```c
+int arr[3][2];
 ```
 
 ::: tip
-& 运算符的操作数必须是变量，取出来的地址大小取决于编译器和系统架构
+在二维数组中可以不用写行数，但列数必须写
 :::
 
-这个指针已经指向了那个变量，就可以通过`*`运算符来访问数据
+## 字符串
 
-```c
-printf("%d", *p); // 通过指针访问上述code中变量存储的数据
-printf("%d", a); // 它和指针访问是等效的
-```
+C 语言是不能定义字符串类型的，即只能通过一个个的字符序列来实现字符串，一般有两种格式
 
-::: tip
-定义变量时的`*`和表达式中的`*`是不同的
-:::
+1. char 数组名[长度] = "字符串值";
+2. char 数组名[长度] = {'字符1','字符2','字符3',...,'\0'};
 
-## 指针的运算
+通过观察发现字符串实际上是一个字符型数组来实现的，其中长度可以省略不写，且第二个方式最后一个元素必须是'\0'，它表示字符串的结束标识，并且不能够写中文，第一种可以写
 
-指针变量的运算实际上是地址的运算，C 语言规定一个地址加上或减去一个整数 n，其运算结果仍然是一个地址
-
-## 数组与指针
-
-数组本身就表达地址，因此数组的地址不需要用`&`取出，但数组的元素表达的是变量，需要使用取地址符
-
-因此`[]`运算符可以对数组变量做，也可以对指针变量做
-
-如果把一个数组当作参数传递给一个函数，这个函数接收的也是一个指针，所以要定义指针变量接收
-
-```c
-int foo(int *arr){
-  return 0;
-}
-int main(){
-  int arr[3] = {1, 2, 3};
-  int *p;
-  p = arr; // 数组名即指针地址
-  foo(arr); // 接收数组时，需要在函数中定义指针变量接收
-  return 0;
-}
-```
+输出一个字符串通常使用`%s``，但更常用的是使用 puts 函数和 gets 函数来输出和输入字符串
